--- a/gmao/templates/gmao/detail_intervention.html
+++ b/gmao/templates/gmao/detail_intervention.html
@@ -226,6 +226,7 @@
     </div>
 {% endblock %}
 {% block extra_js %}
+    <script src="{% static 'js/home.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
     <script>
 
