--- a/gmao/templates/gmao/detail_intervention.html
+++ b/gmao/templates/gmao/detail_intervention.html
@@ -273,6 +273,7 @@
         $(document).on('click', '.commencer-intervention', function (e) {
             e.preventDefault();
             var interventionId = $(this).data('id');
+            // version
             commencerIntervention(interventionId);
         });
 
