--- a/gmao/templates/gmao/detail_intervention.html
+++ b/gmao/templates/gmao/detail_intervention.html
@@ -235,6 +235,7 @@
 {% block extra_js %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
+    <script src="{% static 'gmao/js/home.js' %}"></script>
     <script>
         function commencerIntervention(interventionId) {
             console.log("Début de commencerIntervention", interventionId);
