--- a/gmao/templates/gmao/liste_interventions.html
+++ b/gmao/templates/gmao/liste_interventions.html
@@ -86,7 +86,7 @@
             {% for intervention in interventions %}
                 <tr>
                     <td data-label="NDI">{{ intervention.doleance.ndi }}</td>
-                    <td data-label="Panne">{{ intervention.doleance.panne }}</td>
+                    <td data-label="Panne">{{ intervention.doleance.panne_declarer }}</td>
                     <td data-label="Début prise en charge">{{ intervention.top_depart }}</td>
                     <td data-label="Début travail">{{ intervention.top_debut }}</td>
                     <td data-label="Fin travail">{{ intervention.top_terminer }}</td>
