--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Changer le mot de passe - MEI{% endblock title %}
+{% block title %}Connexion - MEI{% endblock title %}
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'accounts/css/login.css' %}">
@@ -10,20 +10,25 @@
 {% block content %}
     <div class="login-container">
         <div class="login-box">
-            <h5>Changer le mot de passe </h5>
-            <h6>{{ user }}</h6>
+            <div class="logo">
+                <img src="{% static 'accounts/img/logo_mei.png' %}" alt="Mei Logo">
+            </div>
+            <h2>Connexion</h2>
             <form method="post" class="login-form">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="new_password">Nouveau mot de passe</label>
-                    <input type="password" id="new_password" name="new_password" required>
+                    <label for="username">Nom d'utilisateur</label>
+                    <input type="text" id="username" name="username" required>
                 </div>
                 <div class="form-group">
-                    <label for="confirm_password">Confirmer le mot de passe</label>
-                    <input type="password" id="confirm_password" name="confirm_password" required>
+                    <label for="password">Mot de passe</label>
+                    <input type="password" id="password" name="password" required>
                 </div>
-                <button type="submit">Changer le mot de passe</button>
+                <button type="submit">Se connecter</button>
             </form>
+            <div class="login-footer">
+                <a href="#" class="forgot-password">Mot de passe oublié ?</a>
+            </div>
         </div>
     </div>
 {% endblock content %}
