--- a/gmao_teams/templates/gmao_teams/creer_equipe.html
+++ b/gmao_teams/templates/gmao_teams/creer_equipe.html
@@ -2,47 +2,58 @@
 {% load static %}
 
 {% block title %}Créer une équipe{% endblock title %}
+
 {% block nav-btn %}
     <a href="{% url 'logout' %}" class="btn btn-outline-danger text-center text-light border-light btn-sm mx-2"
-       id="btn-nav">
-        Logout
-    </a>
+       id="btn-nav">Logout</a>
     <a href="{% url 'gmao:liste_interventions' %}"
-       class="btn btn-outline-info text-center text-light border-light btn-sm mx-2" id="btn-nav">
-        Liste des interventions
-    </a>
+       class="btn btn-outline-info text-center text-light border-light btn-sm mx-2" id="btn-nav">Liste des
+        interventions</a>
     <a href="{% url 'gmao:toutes_les_doleances' %}"
-       class="btn btn-outline-info text-center text-light border-light btn-sm mx-2" id="btn-nav">
-        Liste des doléances
-    </a>
+       class="btn btn-outline-info text-center text-light border-light btn-sm mx-2" id="btn-nav">Liste des doléances</a>
     {% if user.role == 'ADMIN' %}
         <a href="{% url 'gmao_teams:liste_equipes' %}"
-           class="btn btn-outline-success text-center text-light border-light btn-sm mx-2" id="btn-nav">
-            Gestion des équipes
-        </a>
+           class="btn btn-outline-success text-center text-light border-light btn-sm mx-2" id="btn-nav">Gestion des
+            équipes</a>
     {% endif %}
 {% endblock nav-btn %}
+
 {% block navbar-content %}
     <i style="color: hsl(137, 90%, 50%);" class="fa-solid fa-user-alt"></i>
     &nbsp;&nbsp;&nbsp;{{ user.first_name }}&nbsp;{{ user.last_name }}
 {% endblock navbar-content %}
+
 {% block content %}
     <div class="container mt-4">
-        <h2>Créer une nouvelle équipe</h2>
-        <form id="equipeForm">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="nom">Nom de l'équipe</label>
-                <input type="text" class="form-control" id="nom" name="nom" required>
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header bg-primary text-white">
+                        <h2 class="mb-0">Créer une nouvelle équipe</h2>
+                    </div>
+                    <div class="card-body">
+                        <form id="equipeForm">
+                            {% csrf_token %}
+                            <div class="form-group mb-3">
+                                <label for="nom">Nom de l'équipe</label>
+                                <input type="text" class="form-control" id="nom" name="nom" required>
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="description">Description</label>
+                                <textarea class="form-control" id="description" name="description" rows="3"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary w-100">Créer l'équipe</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="description">Description</label>
-                <textarea class="form-control" id="description" name="description" rows="3"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Créer l'équipe</button>
-        </form>
+        </div>
     </div>
 {% endblock content %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+{% endblock extra_css %}
 
 {% block extra_js %}
     <script src="{% static 'gmao_teams/js/equipes.js' %}"></script>
